character builder upgrades: error window preventing view of character sheet if information incomplete, window automatically closes if no information has been changed to the character, chart reference modals input into accordions, ac, init and speed calculated, all above information now visible in character sheet, player name now included in character builder

--- a/src/App.css
+++ b/src/App.css
@@ -599,7 +599,7 @@ input.col.slider::-webkit-slider-thumb {
   /* CHARACTER BUILDER */
   div.accordion-body select.charPicklist, 
   div.char-name-input input,
-  button.info, .charPicklist {
+  button.info, .charPicklist, .player-name-input {
 	  border-radius: 50px;
 	  border: none;
 	  padding: 5px 10px;
@@ -607,6 +607,12 @@ input.col.slider::-webkit-slider-thumb {
 	  color: var(--dk-gray-300);
 	  background-color: var(--navbar-bg-lt);
 	  /* ^was important */
+  }
+  div.col-lg-4 > button.rounded-circle {
+	background-color: var(--navbar-bg-color);
+  }
+  div.col-lg-4 > button.rounded-circle:hover {
+	background-color: var(--navbar-bg-lt);
   }
 
   .char-build-title {
